--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.26",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-router-dom": "^5.3.0",
-    "@types/styled-components": "^5.1.15",
-    "bootstrap": "^5.1.1",
+    "@types/node": "^12.20.36",
+    "@types/react": "^17.0.33",
+    "@types/react-bootstrap": "^0.32.28",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.2",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.0-rc.0",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-paginate": "^7.1.3",
+    "react-paginate": "^7.1.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "styled-components": "^5.3.3",
-    "typescript": "^4.4.3",
+    "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
