--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-bootstrap": "^0.32.28",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
